Adapt to foreign API changes of Java 20 (currently not tested yet)